[project]
name = "wake-voice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "scikit-learn>=1.8.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.13.1",
    "tqdm>=4.67.1",
]
